--- a/buku.tex
+++ b/buku.tex
@@ -217,6 +217,9 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 \chapter{Kompleksitas}
 \input{chapter/kompleksitas}
 
+\chapter{Big O Notation}
+\input{chapter/chapter6}
+
 %\begin{references}{Ham62}
 %\bibitem[Kil76]{kilb}J. S. Kilby,
 %``Invention of the Integrated Circuit,'' {\it IEEE Trans. Electron Devices,}
