--- a/buku.tex
+++ b/buku.tex
@@ -214,11 +214,14 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 \chapter{Hash Map}
 \input{chapter/hashmap}
 
+\chapter{Hash Tables}
+\input{chapter/hashtable}
+
 \chapter{Kompleksitas}
 \input{chapter/kompleksitas}
 
 \chapter{Big O Notation}
-\input{chapter/chapter6}
+\input{chapter/bigonotation}
 
 %\begin{references}{Ham62}
 %\bibitem[Kil76]{kilb}J. S. Kilby,
