--- a/buku.tex
+++ b/buku.tex
@@ -217,6 +217,9 @@ Maka kamu harus sanggup menahan perihnya Kebodohan.'
 \chapter{Hash Tables}
 \input{chapter/hashtable}
 
+\chapter{Array}
+\input{chapter/array}
+
 \chapter{Kompleksitas}
 \input{chapter/kompleksitas}
 
