--- a/info/acknowledgments.tex
+++ b/info/acknowledgments.tex
@@ -1,7 +1,8 @@
-Terima kasih atas semua masukan dari para mahasiswa agar bisa membuat buku ini 
-lebih baik dan lebih mudah dimengerti.
+Puji syukur kepada Allah S.W.T, yang telah melimpahkan segala karuniaNya sehingga Penulis dapat menyelesaikan Buku Computational Preprocessing ini. Buku ini membahas tentang Python3, Git, dan dasar dari komputasi pada komputer dengan Big O Notation.
 
-Terima kasih ini juga ditujukan khusus untuk team IRC yang 
-telah fokus untuk belajar dan memahami bagaimana buku ini mendampingi proses 
-Intership.
-\authorinitials{R. M. A.}
+Terima kasih kepada Ayah dan Ibu yang selalu mendoakan Penulis dalam proses penulisan Buku ini.
+
+Terima kasih kepada Dosen Pembimbing Penulis atas kritik, saran, dan masukannya
+
+Terima kasih kepada Dosen Penguji Penulis atas kritik, saran, dan masukannya
+\authorinitials{T. A. D. S}
