--- a/info/contributors.tex
+++ b/info/contributors.tex
@@ -1,8 +1,6 @@
 \name{Rolly Maulana Awangga,} Informatics Research Center., Politeknik Pos Indonesia, Bandung,
 Indonesia
-\name{Syafrial Fachri Pane,} Informatics Research Center., Politeknik Pos Indonesia, Bandung,
-Indonesia
-\name{Dinda Majesty,} Informatics Research Center., Politeknik Pos Indonesia, Bandung,
+\name{M. Nurkamal Fauzan,} D4 Teknik Informatika., Politeknik Pos Indonesia, Bandung,
 Indonesia
 \name{Tri Angga Dio Simamora,} Informatics Research Center., Politeknik Pos Indonesia, Bandung,
 Indonesia
