--- a/info/glossary.tex
+++ b/info/glossary.tex
@@ -1,4 +1,4 @@
-\term{chatbot}Merupakan sebuah teknologi layanan obrolan yang ditangani oleh sistem atau robot.
+\term{Preprocessing}Merupakan tahapan sebelum proses dilakukan
 
 \term{bash}Merupakan bahasa sistem operasi berbasiskan *NIX.
 
