--- a/info/introduction.tex
+++ b/info/introduction.tex
@@ -1,10 +1,7 @@
 
 %% optional, but if you want to list author:
 
-\introauthor{Rolly Maulana Awangga, S.T., M.T.}
+\introauthor{Tri Angga Dio Simamora}
 {Informatics Research Center\\
 Bandung, Jawa Barat, Indonesia}
-Pada era disruptif  \index{disruptif}\index{disruptif!modern} 
-saat ini. git merupakan sebuah kebutuhan dalam sebuah organisasi pengembangan perangkat lunak.
-Buku ini diharapkan bisa menjadi penghantar para programmer, analis, IT Operation dan Project Manajer.
-Dalam melakukan implementasi git pada diri dan organisasinya.
+Pada era komputasi yang sangat cepat membutuhkan sumber daya yang sangat besar. Akan tetapi sumber daya yang sangat besar membutuhkan biaya yang cukup besar juga, buku ini akan membahas tentang bagaimana cara kita bisa mengoptimasi sebuah program agar bisa jalan 10x lebih cepat dengan sumber daya yang sama.
