--- a/info/preface.tex
+++ b/info/preface.tex
@@ -1,5 +1,5 @@
-Buku ini berisi pengantar serta tata cara yang harus dilakukan dalam pembuatan whatsapp chatbot. Buku ini diharapkan dapat membantu orang-orang memahami cara kerja chatbot, hal yang dibutuhkan dalam pembuatan aplikasi chatbot serta cara membuat chatbot.
+Buku ini berisi bagaimana cara optimasi kode program menjadi lebih efisien pada sumber daya komputasi yang sama. Buku ini diharapkan dapat membantu orang-orang memahami Big O Notation pada sebuah kode program.
 
 \prefaceauthor{Tim Penulis}
 \where{Bandung, Jawa Barat\\
-Januari, 2020}
+Februari, 2022}
